# dataquality

./: pyproject.toml
app/: funcao.py
tests/: test_ola.py
